test/evalDecimal.slq
def f(a:!â„,)â‡’0:ğ”¹;
def fi(a:!Z,)â‡’0:ğ”¹;
def g()â‡’f(-0.1,);
def h()â‡’f(-1e-1,);
def hi()â‡’fi(-1e-1,); /// error
